minor: no need to create new instances of Boolean